# solana-borrow-lending

./: .env.example  .gitignore  .gitlab-ci.yml  AUDIT_SUMMARY.md  Anchor.toml  CHANGELOG.md  Cargo.toml  NETLIFY_DEPLOYMENT.md  README.md  STABLE_COIN.md  UNSAFE_CODES.md  audit-report.typ  netlify.toml  package-lock.json  package.json  test.sh  validate_audit.sh
.github/workflows/: build-and-deploy.yml
cli/: .env.example  Cargo.toml  example-config.json
cli/src/: endpoints.rs  main.rs  prelude.rs
cli/src/endpoints/: init_lending_market.rs  init_reserve.rs
cpis/: Cargo.toml  README.md
cpis/src/: aldrin.rs  lib.rs
decimal/: Cargo.toml
decimal/src/: lib.rs
docs/: api-reference.md  developer-guide.md  documentation.md  github_issue_template.md  index.md  mermaid_diagrams.md  performance-optimization.md  tokenomics_analysis.md  user-tutorials.md  vulnerability_analysis.md  zero-copy-architecture.md
docs/auto-generated/: api-structures.md  auto-generated-index.md  function-reference.md
programs/borrow-lending/: CHANGELOG.md  Cargo.toml
programs/borrow-lending/proptest-regressions/models/: reserve.txt
programs/borrow-lending/src/: endpoints.rs  err.rs  lib.rs  models.rs  prelude.rs  zero_copy_utils.rs
programs/borrow-lending/src/endpoints/: amm.rs  borrow_obligation_liquidity.rs  deposit_obligation_collateral.rs  deposit_reserve_liquidity.rs  emit.rs  flash_loan.rs  init_lending_market.rs  init_obligation.rs  init_reserve.rs  liquidate_obligation.rs  redeem_reserve_collateral.rs  refresh_obligation.rs  refresh_reserve.rs  repay_obligation_liquidity.rs  set_lending_market_owner.rs  toggle_flash_loans.rs  update_lending_market.rs  update_reserve_config.rs  withdraw_obligation_collateral.rs
programs/borrow-lending/src/endpoints/amm/: aldrin.rs
programs/borrow-lending/src/endpoints/amm/aldrin/: close_leveraged_position_on_aldrin.rs  close_vault_position_on_aldrin.rs  compound_position_on_aldrin.rs  init_reserve_aldrin_unstable_lp_token.rs  open_leveraged_position_on_aldrin.rs  open_vault_position_on_aldrin.rs  refresh_reserve_aldrin_unstable_lp_token.rs
programs/borrow-lending/src/endpoints/emit/: claim_emission.rs  close_emission.rs  create_emission.rs  take_reserve_cap_snapshot.rs
programs/borrow-lending/src/endpoints/leverage_farming/: aldrin.rs
programs/borrow-lending/src/endpoints/leverage_farming/aldrin/: close.rs  compound.rs  open.rs
programs/borrow-lending/src/math/: common.rs  decimal.rs  mod.rs  rate.rs  sdecimal.rs  wad.rs
programs/borrow-lending/src/models/: aldrin_amm.rs  amm.rs  emissions.rs  farming_receipt.rs  last_update.rs  lending_market.rs  obligation.rs  oracle.rs  pyth.rs  reserve.rs
programs/borrow-lending/src/tests/: discriminator_safety.rs  mod.rs
programs/stable-coin/: CHANGELOG.md  Cargo.toml
programs/stable-coin/proptest-regressions/models/: receipt.txt
programs/stable-coin/src/: endpoints.rs  err.rs  lib.rs  models.rs  prelude.rs
programs/stable-coin/src/endpoints/: borrow_stable_coin.rs  degen.rs  deleverage_via_aldrin_amm.rs  deposit_collateral.rs  init_component.rs  init_receipt.rs  init_stable_coin.rs  leverage_on_aldrin_amm.rs  leverage_via_aldrin_amm.rs  liquidate_position.rs  repay_stable_coin.rs  update_component_config.rs  withdraw_collateral.rs
programs/stable-coin/src/endpoints/degen/: init_degen_strategy.rs  open_leveraged_degen_position.rs  transfer_degen_strategy_funds.rs  update_degen_strategy_interest_ratio.rs
programs/stable-coin/src/models/: component.rs  degen_receipt.rs  degen_strategy.rs  receipt.rs  reserve.rs  sdecimal.rs  stable_coin.rs
scripts/: generate_docs.py  generate_docs.sh
solana-lending-tui/: Cargo.toml  README.md
solana-lending-tui-demo/: Cargo.toml
solana-lending-tui-demo/src/: main.rs
solana-lending-tui/src/: app.rs  config.rs  error.rs  event.rs  input.rs  main.rs  ui.rs
solana-lending-tui/src/solana/: client.rs  mod.rs  models.rs
tests/: localnet-conf.yml
tests/fixtures/: README.md
tests/localnet-deps/programs/shmem/: Cargo.toml
tests/localnet-deps/programs/shmem/src/: lib.rs
tests/src/: 1-init-lending-market.ts  10-withdraw-obligation-collateral.ts  11-borrow-obligation-liquidity.ts  12-repay-obligation-liquidity.ts  13-liquidate-obligation.ts  14-flash-loan.ts  15-leveraged-position-on-aldrin.ts  16-take-reserve-cap-snapshot.ts  17-emission.ts  18-vault-position-on-aldrin.ts  19-reserve-aldrin-unstable-lp-token.ts  2-set-lending-market-owner.ts  3-init-reserve.ts  4-refresh-reserve.ts  5-deposit-reserve-liquidity.ts  6-redeem-reserve-collateral.ts  7-init-obligation.ts  8-refresh-obligation.ts  9-deposit-obligation-collateral.ts  amm-pool.ts  borrow-lending.ts  component.ts  consts.ts  deposit-obligation-collateral.ts  deposit-reserve-liquidity.ts  emission.ts  global-container.ts  helpers.ts  index.ts  init-obligation.ts  init-reserve.ts  lending-market.ts  obligation.ts  pyth.ts  receipt.ts  redeem-reserve-collateral.ts  refresh-obligation.ts  refresh-reserve.ts  reserve.ts  set-lending-market-owner.ts  (+2 more)
tests/src/emission/: 1-emission.ts  (+1 more)
ui/: .eslintrc.json  .gitignore  DASHBOARD_GUIDE.md  KEYBOARD_SHORTCUTS.md  README.md  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  playwright.config.ts  rollup.config.js  tailwind.config.js  test-dashboard.sh  tsconfig.tsbuildinfo
ui/__tests__/: useWalletConnection.test.ts
ui/docs/: USER_GUIDE.md  ui-wallet-adapter.md
ui/e2e/: wallet-integration.spec.ts
ui/public/: browserconfig.xml  manifest.json  sw.js
(+101 files in other folders)
