[package]
name = "decimal"
version = "0.1.0"
edition = "2018"

[features]
serde = ["serde_crate", "serde_json"]

[dependencies]
anchor-lang = "0.21"
borsh = "*" # any anchor_lang compatible version will do
serde_json = { version = "1.0", optional = true }
uint = "0.9"

[dependencies.serde_crate]
package = "serde"
version = "1.0"
optional = true
