[package]
name = "solana-lending-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
# TUI dependencies
ratatui = "0.23.0"
crossterm = "0.27.0"
tui-input = "0.8.0"

# Solana dependencies
solana-sdk = "1.16.0"
solana-client = "1.16.0"
solana-program = "1.16.0"
anchor-client = "0.28.0"
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"

# Utility dependencies
anyhow = "1.0.75"
thiserror = "1.0.50"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
chrono = "0.4.31"
clap = { version = "4.4.6", features = ["derive"] }
dirs = "5.0.1"
log = "0.4.20"
env_logger = "0.10.0"
async-trait = "0.1.74"
futures = "0.3.28"