[package]
name = "borrow-lending"
version = "0.2.0"
description = "Aldrin implementation of borrow-lending inspired by Compound"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "borrow_lending"
doctest = false

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
serde = ["serde_crate", "serde_json"]

[dependencies]
anchor-lang = "0.18"
anchor-spl = "0.18"
pyth-client = "0.2"
shrinkwraprs = "0.3"
spl-token = { version = "3.2", features = ["no-entrypoint"] }
uint = "0.9"
# we use any version which means the selected version is
# going to be compatible with anchor-lang
borsh = "*"
serde_json = { version = "1.0", optional = true }

[dependencies.serde_crate]
package = "serde"
version = "1.0"
optional = true

[dev-dependencies]
memoffset = "0.6"
proptest = "1.0"
