[package]
name = "borrow-lending"
version = "4.0.0"
description = "Aldrin implementation of borrow-lending inspired by Compound"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "borrow_lending"
doctest = false

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
serde = ["serde_crate", "serde_json"]

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
borsh = "*" # any anchor_lang compatible version will do
bytemuck = "*"
decimal = { git = "ssh://git@gitlab.com/crypto_project/defi/decimal.git", tag = "0.1.0" }
cpis = { path = "../../cpis" }
pyth-client = "0.2"
serde_json = { version = "1.0", optional = true }
shrinkwraprs = "0.3"
spl-token = { version = "3.2", features = ["no-entrypoint"] }
uint = "0.9"

[dependencies.serde_crate]
package = "serde"
version = "1.0"
optional = true

[dev-dependencies]
memoffset = "0.6"
proptest = "1.0"
