[package]
name = "stable-coin"
version = "1.0.0"
description = ""
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "stable_coin"
doctest = false

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
borrow-lending = { path = "../borrow-lending", features = ["no-entrypoint"] }
cpis = { path = "../../cpis" }
decimal = { git = "ssh://git@gitlab.com/crypto_project/defi/decimal.git", tag = "0.1.0" }
uint = "0.9"

[dev-dependencies]
proptest = "1.0"
