[package]
name = "shmem"
version = "2.0.6"
description = "Fork of Solana Program Library Shared-memory"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2018"

[dependencies]
arrayref = "0.3.6"
solana-program = "=1.8.1"

[lib]
crate-type = ["cdylib", "lib"]
